Added XPLMessage class

--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -32,6 +32,8 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="XPLHal.h" />
+		<Unit filename="XPLMessage.cpp" />
 		<Unit filename="main.cpp" />
 		<Unit filename="xPLLib/xPL-config.c">
 			<Option compilerVar="CC" />
