Created XPLMessage.h and moved appropriate declarations there.

--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -34,6 +34,7 @@
 		</Compiler>
 		<Unit filename="XPLHal.h" />
 		<Unit filename="XPLMessage.cpp" />
+		<Unit filename="XPLMessage.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="xPLLib/xPL-config.c">
 			<Option compilerVar="CC" />
