--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -44,6 +44,8 @@
 		<Unit filename="XPLHal.h" />
 		<Unit filename="XPLMessage.cpp" />
 		<Unit filename="XPLMessage.h" />
+		<Unit filename="XPLParser.cpp" />
+		<Unit filename="XPLParser.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="storage.h" />
 		<Unit filename="xPLLib/xPL-config.c">
