--- a/base_network_code/base_network_code/base_network_code.cbp
+++ b/base_network_code/base_network_code/base_network_code.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lpthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/base_network_code" prefix_auto="1" extension_auto="1" />
@@ -31,8 +34,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="../application.cpp" />
+		<Unit filename="../deamon.cpp" />
 		<Unit filename="../deamon.h" />
-		<Unit filename="../myecho.cpp" />
 		<Unit filename="../pthreadcc/condition.cpp" />
 		<Unit filename="../pthreadcc/mutualexclusion.cpp" />
 		<Unit filename="../pthreadcc/pthreadcc.h" />
