--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -14,6 +14,9 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="-lpthread" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/xPL_codeblocks" prefix_auto="1" extension_auto="1" />
@@ -49,7 +52,21 @@
 		<Unit filename="XPLRuleManager.cpp" />
 		<Unit filename="XPLRuleManager.h" />
 		<Unit filename="determinator-main.cpp" />
+		<Unit filename="pthreadcc/condition.cpp" />
+		<Unit filename="pthreadcc/mutualexclusion.cpp" />
+		<Unit filename="pthreadcc/pthreadcc.h" />
+		<Unit filename="pthreadcc/semaphore.cpp" />
+		<Unit filename="pthreadcc/threadbase.cpp" />
+		<Unit filename="pthreadcc/threadexception.cpp" />
+		<Unit filename="socketcc/ipaddress.cpp" />
+		<Unit filename="socketcc/socketbase.cpp" />
+		<Unit filename="socketcc/socketcc.h" />
+		<Unit filename="socketcc/socketexception.cpp" />
+		<Unit filename="socketcc/tcpsockets.cpp" />
+		<Unit filename="socketcc/udpsockets.cpp" />
 		<Unit filename="storage.h" />
+		<Unit filename="tcpserver.cpp" />
+		<Unit filename="tcpserver.h" />
 		<Unit filename="xPLLib/xPL-config.c">
 			<Option compilerVar="CC" />
 		</Unit>
