--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -51,6 +51,8 @@
 		<Unit filename="XPLParser.h" />
 		<Unit filename="XPLRuleManager.cpp" />
 		<Unit filename="XPLRuleManager.h" />
+		<Unit filename="deamon.cpp" />
+		<Unit filename="deamon.h" />
 		<Unit filename="determinator-main.cpp" />
 		<Unit filename="pthreadcc/condition.cpp" />
 		<Unit filename="pthreadcc/mutualexclusion.cpp" />
