Removed old test code

--- a/xPL_codeblocks/xPL_codeblocks.cbp
+++ b/xPL_codeblocks/xPL_codeblocks.cbp
@@ -44,7 +44,6 @@
 		<Unit filename="DeterminatorSerializer.h" />
 		<Unit filename="DeterminatorTest.cpp" />
 		<Unit filename="DeterminatorWriter.h" />
-		<Unit filename="TestRunner.cpp" />
 		<Unit filename="XHCP_Parser.cpp" />
 		<Unit filename="XHCP_Parser.h" />
 		<Unit filename="XPLAction.cpp" />
@@ -63,6 +62,7 @@
 		<Unit filename="XPLRuleManager.h" />
 		<Unit filename="deamon.cpp" />
 		<Unit filename="deamon.h" />
+		<Unit filename="determinator-main.cpp" />
 		<Unit filename="pthreadcc/condition.cpp" />
 		<Unit filename="pthreadcc/mutualexclusion.cpp" />
 		<Unit filename="pthreadcc/pthreadcc.h" />
