--- a/xPL_codeblocks/xPLHal.cbp
+++ b/xPL_codeblocks/xPLHal.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="xPL_codeblocks" />
+		<Option title="xPLHal" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/xPL_codeblocks" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/xPLHal" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -19,7 +19,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/xPL_codeblocks" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/xPLHal" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
