--- a/xPL_codeblocks/xPLHal.cbp
+++ b/xPL_codeblocks/xPLHal.cbp
@@ -14,9 +14,6 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
-				<Linker>
-					<Add option="-lpthread" />
-				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/xPLHal" prefix_auto="1" extension_auto="1" />
@@ -30,11 +27,20 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="Test">
+				<Option output="bin/Debug/xPLHalTest" prefix_auto="1" extension_auto="1" />
+				<Option object_output="obj/Test/" />
+				<Option type="1" />
+				<Option compiler="gcc" />
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="-lpthread" />
+		</Linker>
 		<Unit filename="Determinator.cpp" />
 		<Unit filename="Determinator.h" />
 		<Unit filename="DeterminatorFactory.cpp" />
@@ -58,7 +64,10 @@
 		<Unit filename="XPLParser.h" />
 		<Unit filename="XPLRuleManager.cpp" />
 		<Unit filename="XPLRuleManager.h" />
-		<Unit filename="determinator-main.cpp" />
+		<Unit filename="determinator-main.cpp">
+			<Option target="Debug" />
+			<Option target="Release" />
+		</Unit>
 		<Unit filename="pthreadcc/condition.cpp" />
 		<Unit filename="pthreadcc/mutualexclusion.cpp" />
 		<Unit filename="pthreadcc/pthreadcc.h" />
@@ -71,6 +80,24 @@
 		<Unit filename="socketcc/socketexception.cpp" />
 		<Unit filename="socketcc/tcpsockets.cpp" />
 		<Unit filename="socketcc/udpsockets.cpp" />
+		<Unit filename="test/DeterminatorFactoryTest.cpp">
+			<Option target="Test" />
+		</Unit>
+		<Unit filename="test/DeterminatorTest.cpp">
+			<Option target="Test" />
+		</Unit>
+		<Unit filename="test/TestRunner.cpp">
+			<Option target="Test" />
+		</Unit>
+		<Unit filename="test/XPLActionTest.cpp">
+			<Option target="Test" />
+		</Unit>
+		<Unit filename="test/XPLConditionTest.cpp">
+			<Option target="Test" />
+		</Unit>
+		<Unit filename="test/XPLMessageTest.cpp">
+			<Option target="Test" />
+		</Unit>
 		<Unit filename="xPLLib/xPL-config.c">
 			<Option compilerVar="CC" />
 		</Unit>
