Moved generic stuff to XPLCommon so I can use the name XPLHal

--- a/xPL_codeblocks/src/CMakeLists.txt
+++ b/xPL_codeblocks/src/CMakeLists.txt
@@ -25,6 +25,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/xPLLib")
 add_subdirectory (xPLLib)
 include_directories ("${PROJECT_SOURCE_DIR}/pugixml")
 add_subdirectory (pugixml)
+include_directories ("${PROJECT_SOURCE_DIR}/xPLsdk/src")
+add_subdirectory (xPLsdk/src)
 
 find_package (Threads)
 
@@ -32,9 +34,10 @@ find_package (Threads)
 #Sends the -std=c99 flag to the gcc compiler
 #add_definitions(-std=c99)
 #This tells CMake to fib.c and name it fibonacci
-add_executable(xplhallite Determinator.cpp DeterminatorFactory.cpp TCPDaemon.cpp TCPServer.cpp XHCP_Parser.cpp XPLAction.cpp XPLCondition.cpp XPLMessage.cpp XPLParser.cpp XPLRuleManager.cpp LogAction.cpp TimeCondition.cpp DeterminatorEnvironment.cpp determinator-main.cpp)
+add_executable(xplhallite Determinator.cpp DeterminatorFactory.cpp TCPDaemon.cpp TCPServer.cpp XHCP_Parser.cpp XPLAction.cpp XPLCondition.cpp XPLMessage.cpp XPLParser.cpp XPLRuleManager.cpp LogAction.cpp TimeCondition.cpp DeterminatorEnvironment.cpp XHCPDispatcher.cpp XPLHal.cpp determinator-main.cpp)
 target_link_libraries (xplhallite pthreadcc)
 target_link_libraries (xplhallite socketcc)
 target_link_libraries (xplhallite xPLLib)
 target_link_libraries (xplhallite pugixml)
+target_link_libraries (xplhallite xplsdk)
 target_link_libraries (xplhallite ${CMAKE_THREAD_LIBS_INIT})
