Made some massive changes to incorporate xplsdk. Had to change xplsdk, too. Definately not done yet, but it functions and doesn't leak memory.

--- a/xPL_codeblocks/src/CMakeLists.txt
+++ b/xPL_codeblocks/src/CMakeLists.txt
@@ -21,8 +21,8 @@ include_directories ("${PROJECT_SOURCE_DIR}/pthreadcc")
 add_subdirectory (pthreadcc)
 include_directories ("${PROJECT_SOURCE_DIR}/socketcc")
 add_subdirectory (socketcc)
-include_directories ("${PROJECT_SOURCE_DIR}/xPLLib")
-add_subdirectory (xPLLib)
+# include_directories ("${PROJECT_SOURCE_DIR}/xPLLib")
+# add_subdirectory (xPLLib)
 include_directories ("${PROJECT_SOURCE_DIR}/pugixml")
 add_subdirectory (pugixml)
 include_directories ("${PROJECT_SOURCE_DIR}/xPLsdk/src")
@@ -37,7 +37,7 @@ find_package (Threads)
 add_executable(xplhallite Determinator.cpp DeterminatorFactory.cpp TCPDaemon.cpp TCPServer.cpp XHCP_Parser.cpp XPLAction.cpp XPLCondition.cpp XPLMessage.cpp XPLParser.cpp XPLRuleManager.cpp LogAction.cpp TimeCondition.cpp DeterminatorEnvironment.cpp XHCPDispatcher.cpp XPLHal.cpp determinator-main.cpp)
 target_link_libraries (xplhallite pthreadcc)
 target_link_libraries (xplhallite socketcc)
-target_link_libraries (xplhallite xPLLib)
+# target_link_libraries (xplhallite xPLLib)
 target_link_libraries (xplhallite pugixml)
 target_link_libraries (xplhallite xplsdk)
 target_link_libraries (xplhallite ${CMAKE_THREAD_LIBS_INIT})
