--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,4 @@
-[submodule "xPL_codeblocks/src/xPLsdk"]
-	path = xPL_codeblocks/src/xPLsdk
-	url = git@github.com:zeroping/xPLsdk-poco.git
 [submodule "src/xPLsdk"]
 	path = src/xPLsdk
-	url = git@github.com:zeroping/xPLsdk-poco.git
+	url = https://github.com/zeroping/xPLsdk-poco.git
+
